--- a/style.css
+++ b/style.css
@@ -1,1 +1,76 @@
+ *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container{
+    width: 600px;
+    height: 350px;
+    background-color: rgb(253, 253, 250);
+
+}
+h1{
+    text-align: center;
+    margin-bottom: 2px;
+    color: rgb(178, 30, 236);
+}
+h3{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.container .box{
+    width: 100%;
+    display: flex;
+    margin-left: 5px;
+}
+.box div{
+    width: 100%;
+    margin-left: 5px;
+    margin-bottom: 15px;
+
+}
+select{
+   width: 95%;
+   height: 40px;
+   font-size: 1em;
+   cursor: pointer;
+   outline: none;
+   background: none;
+   margin: 2px; 
+   border-radius: 10px;   
+}
+input{
+   width: 95%;
+   height: 40px;
+   font-size: 15px;
+   margin: 2px; 
+   border-radius: 10px;
+   background: none;
+   outline: none;
+   padding: 0 20px;
+}
+.btn{
+   width: 85%;
+   height: 40px;
+   background: rgb(31, 30, 30);
+   color: white;
+   border-radius: 10px;
+   border: none;
+   cursor: pointer;
+   font-size: 15px;
+   margin: 10px 0;    
+   padding: 10px 30px;
+   cursor: pointer;
+   display: block;
+   margin: auto;
+   margin-bottom: 5%;
+}
+
+
 
